tdf#91140: ODF import: try to ignore invalid draw:fill="solid"

... which was apparently written by LO >= 4.1 on a frame with image
background, under unknown circumstances.

Change-Id: Ie86643ab67f58bfe5c19d6a1f80a7af8f793edf2