sw/qa/extras/odfimport/odfimport.cxx
@@ -573,7 +573,7 @@ DECLARE_ODFIMPORT_TEST(fdo81223, "fdo81223.odt")
     uno::Reference<beans::XPropertySet> xFrame(xIndexAccess->getByIndex(0), uno::UNO_QUERY);
     sal_Int32 nValue(0);
     xFrame->getPropertyValue("BackColor") >>= nValue;
-    CPPUNIT_ASSERT_EQUAL(sal_Int32(0xfeffffff), nValue);
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(0xffffffff), nValue);
 }
 
 DECLARE_ODFIMPORT_TEST(fdo90130_1, "fdo90130-1.odt")
